examples/error/rn4544_err3.jle
# rn4544_err3.jle
# A program that finds the value of a hypothenuse
# by Ryan Neubauer

display "This program calculates the value of a hypothenuse given two sides of a triangle"; nl
# moved semi-colon before nl character
display "Enter b, c:", nl;
input b, c;
a := (b^2 + c^2)^0.5;
display "The value of a is", a, nl;